--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Aurelia</title>
+<head>
+    <title>Mchart</title>
+    <!--<link rel="stylesheet" type="text/css" href="jspm_packages/github/twbs/bootstrap@3.3.2/css/bootstrap.min.css">-->
     <link rel="stylesheet" type="text/css" href="jspm_packages/npm/font-awesome@4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
-  </head>
-  <body aurelia-app>
-    <!--ES6 module loader-->
-    <script src="jspm_packages/system.js"></script>
-    <!--loader config-->
-    <script src="config.js"></script>
-    <script>
-      System.baseUrl = 'dist'; //NOTE: You can move this into the config.js file, if you like.
-      System.import('aurelia-bootstrapper').catch(console.error.bind(console));
-    </script>
-  </body>
+    <link rel="shortcut icon" href="favicon.ico">
+</head>
+<body aurelia-app>
+<!--ES6 module loader-->
+<script src="jspm_packages/system.js"></script>
+<!--loader config-->
+<script src="config.js"></script>
+<script>
+    System.baseUrl = 'dist'; //NOTE: You can move this into the config.js file, if you like.
+    System.import('aurelia-bootstrapper');
+</script>
+</body>
 </html>
