--- a/src/app.html
+++ b/src/app.html
@@ -1,21 +1,8 @@
 <template>
-    <section>
-        <h2>${heading}</h2>
+    <import from='./m-chart'></import>
 
-        <form role="form" submit.delegate="welcome()">
-            <div class="form-group">
-                <label for="fn">First Name</label>
-                <input type="text" value.bind="firstName" class="form-control" id="fn" placeholder="first name">
-            </div>
-            <div class="form-group">
-                <label for="ln">Last Name</label>
-                <input type="text" value.bind="lastName" class="form-control" id="ln" placeholder="last name">
-            </div>
-            <div class="form-group">
-                <label>Full Name</label>
-                <p class="help-block">${fullName}</p>
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-    </section>
+    <div class="page-host">
+        <!--some stuff here-->
+        <m-chart></m-chart>
+    </div>
 </template>
