--- a/src/calculated-dimension.html
+++ b/src/calculated-dimension.html
@@ -6,8 +6,8 @@
             <th class="changedPomCell">*</th>
             <th class="pomDescCell">Measurement Point</th>
             <th class="commentCell">Description</th>
-            <th repeat.for="sizeName of sizeNames()" class="sizeCell ${size.baseSize ? 'baseSize' : ''}">
-                ${sizeName}
+            <th repeat.for="size of allSizes()" class="sizeCell ${size.baseSize ? 'baseSize' : ''}">
+                ${size.sizeName}
             </th>
         </tr>
         </thead>
@@ -25,7 +25,7 @@
                 ${pom.comment}
             </td>
             <!--<td class="sizeCell baseSize"></td>-->
-            <td repeat.for="size of pom.sizes" class="sizeCell">
+            <td repeat.for="size of pom.sizes" class="sizeCell ${size.baseSize ? 'active' : ''}">
                 ${size.measurementValue}
             </td>
         </tr>
