--- a/src/edit-dimension.html
+++ b/src/edit-dimension.html
@@ -1,5 +1,7 @@
 <template>
 
+    <import from="./sort"></import>
+
         <table class="table">
             <thead>
             <tr>
@@ -24,7 +26,7 @@
             </thead>
 
             <tbody ref="el">
-                <tr repeat.for="pom of poms" class="pom">
+                <tr repeat.for="pom of poms | sort:'sortOrder'" class="pom">
                     <td class="rowActionCell">
                         <div class="dynamicTableMoveRowButton"></div>
                         <img id="tableActionAdd"
